[package]
name = "plura"
version = "0.1.0"
edition = "2024"
license = "MIT"
categories = ["command-line-utilities", "web-programming::http-server"]
description = "Bot for Slack workspaces to make the lives for plural systems a bit easier"
repository = "https://github.com/Suya1671/plura.git"
keywords = ["plural", "slack-bot", "cli", "web-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
displaydoc = "0.2.5"
error-stack = { version = "0.5.0", features = [
    "eyre",
    "hooks",
    "serde",
    "spantrace",
] }
http-body-util = "0.1.3"
menv = "0.2.7"
oauth2 = "5.0.0"
redact = "0.1.10"
rustls = "0.23.28"
serde = { version = "1.0.219", features = ["derive"] }
slack-morphism = { version = "2.12.0", features = ["axum"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "sqlite-preupdate-hook",
    "migrate",
    "time",
] }
libsqlite3-sys = { version = "0.30.1" }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

url = "2.5.4"
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["trace"] }
derive_more = { version = "2.0.1", features = ["from"] }
futures = "0.3.31"
indoc = "2.0.6"
tracing-journald = "0.3.1"

[features]
encrypt = ["libsqlite3-sys/bundled-sqlcipher"]

# Really not needed for the current bot scale. Might add again later
# [profile.release]
# lto = "thin"
# codegen-units = 1
